--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.3.1"
   },
   "devDependencies": {
