--- a/part5/bloglist/package.json
+++ b/part5/bloglist/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test":" $env:CI=$true; npm test",
+    "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint .",
     "test coverage": "$env:CI=$true; npm test -- --coverage",
