--- a/part6/unicafe/.gitignore
+++ b/part6/unicafe/.gitignore
@@ -1,17 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-server
-fullstack
-app
-current
-rest
-temp
-part6Playground
+/node_modules
 /.pnp
 .pnp.js
-.env
 
 # testing
 /coverage
@@ -20,12 +12,12 @@ part6Playground
 /build
 
 # misc
-.DS_Store 
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log* 
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
